# tocken

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: check.yml
scripts/: train.py
src/: lib.rs  main.rs  stopwords.rs  tokenizer.rs
